I added their constructors, methods and properties to the classes.
In the character class, I added properties, Name, life, strength and defense, then I added 2 methods, one is called when the character receives damage, Then in the player class I add 2 properties, one to store a list of Item type objects and another of weapon type, I add their properties and the attack method and how the item is used

--- a/Practica Clase 2/Practica Clase 2/Practica Clase 2.csproj
+++ b/Practica Clase 2/Practica Clase 2/Practica Clase 2.csproj
@@ -43,6 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Objetos\Arms.cs" />
+    <Compile Include="Objetos\Item.cs" />
+    <Compile Include="Objetos\Sword.cs" />
+    <Compile Include="Personajes\Enemy.cs" />
+    <Compile Include="Personajes\Personaje.cs" />
+    <Compile Include="Personajes\Player.cs" />
+    <Compile Include="Personajes\Skeleton.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
